--- a/home.html
+++ b/home.html
@@ -134,6 +134,23 @@
             <p><b>Disability:</b> Deaf</p>
             <p><b>Introduction:</b> Hello! I'm John, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
           </div>
+
+          <div class="discover-card">
+            <div class="discover-top">
+              <div class="profile-name">
+                <img src="img/sample-user.png" alt="Profile picture of John Griffith" class="friend-img">
+                <h2 class="card-text">John Griffith</h2>
+              </div>
+              <button class="connect-btn">Connect</button>
+            </div>
+            <p><b>Age:</b> 18</p>
+            <p><b>Gender:</b> Male</p>
+            <p><b>Pronouns:</b> He/him</p>
+            <p><b>Location:</b> Seattle, WA</p>
+            <p><b>Hobbies:</b> Drawing, watching movies, singing</p>
+            <p><b>Disability:</b> Deaf</p>
+            <p><b>Introduction:</b> Hello! I'm John, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
+          </div>
         </div>
 
         <div id="chatbox" style="display:none;">
