added kebab menu

--- a/home.html
+++ b/home.html
@@ -124,7 +124,11 @@
                 <img src="img/sample-user.png" alt="Profile picture of John Griffith" class="friend-img">
                 <h2 class="card-text">John Griffith</h2>
               </div>
-              <button class="connect-btn">Connect</button>
+              <div class="connect-container">
+                <button class="connect-btn">Connect</button>
+                <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg>
+              </div>
+
             </div>
             <p><b>Age:</b> 18</p>
             <p><b>Gender:</b> Male</p>
@@ -141,7 +145,10 @@
                 <img src="img/sample-user.png" alt="Profile picture of John Griffith" class="friend-img">
                 <h2 class="card-text">John Griffith</h2>
               </div>
-              <button class="connect-btn">Connect</button>
+              <div class="connect-container">
+                <button class="connect-btn">Connect</button>
+                <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg>
+              </div>
             </div>
             <p><b>Age:</b> 18</p>
             <p><b>Gender:</b> Male</p>
