--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                     document.getElementById('login').onclick = function() {
                         window.location.href = 'login.html';
                     };
+                       document.getElementById('back_button').onclick = function() {
+                        window.location.href = 'signup.html';
+                    };
                 </script>
             </body>
         </head>
