--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     document.getElementById('login').onclick = function() {
                         window.location.href = 'login.html';
                     };
-                       document.getElementById('back_button').onclick = function() {
+                       document.getElementById('sign up').onclick = function() {
                         window.location.href = 'signup.html';
                     };
                 </script>
