--- a/signup.html
+++ b/signup.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="login.css">
-    
+    <link rel="stylesheet" href="nunito.css"> <!-- Load font stylesheet first -->
+    <link rel="stylesheet" href="login.css">   <!-- Then, load custom stylesheet -->
 </head>
+    
 <body>
     <div class="logo-container">
         <img src="img/palpalette.png" alt="PalPalette Logo" class="palpalette-logo">
