--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="nunito.css"> <!-- Load font stylesheet first -->
-    <link rel="stylesheet" href="login.css">   <!-- Then, load custom stylesheet -->
+       <!-- Then, load custom stylesheet -->
 </head>
     
 <body>
