--- a/signup.html
+++ b/signup.html
@@ -86,9 +86,9 @@
 <div class="custom-input">
     <textarea id="input12" name="input12" placeholder="Enter bio (optional)"></textarea>
 </div>
-
+<label for="input20" id="i1">Upload Photo below(optional)</label>
     <div>
-    <img src="img/uploadicon.jpg" alt="Upload Icon">
+    <img src="img/uploadicon.jpg" id="input20" name="input20" alt="Upload Icon">
 </div>
         <label for="input13" id="i1">Alt Text For Profile Picture</label>
     <input type="text" id="input13" name="input13" placeholder="Enter alt text for profile picture">
