--- a/signup.html
+++ b/signup.html
@@ -19,34 +19,26 @@
 
 <h2>How do you want to communicate?</h2>
 
-<form action="/action_page.php">
+ <form>
   <input type="checkbox" id="vehicle1" name="vehicle1" value="v1">
-  <label for="vehicle1" id="m1"> I prefer using a screenreader</label>
-  
+  <label for="vehicle1" id="m1"> I prefer using a screenreader</label><div>
   <input type="checkbox" id="vehicle2" name="vehicle2" value="v2">
-  <label for="vehicle2" id="m2"> I prefer reduced noise</label>
-  
+  <label for="vehicle2" id="m2"> I prefer reduced noise</label><div>
   <input type="checkbox" id="vehicle3" name="vehicle3" value="v3">
-  <label for="vehicle3"> I prefer increased color contrast</label>
-  
-  <input type="checkbox" id="vehicle4" name="vehicle4" value="v4">
-  <label for="vehicle4"> I prefer reduced motion</label>
-  
-  <input type="checkbox" id="vehicle5" name="vehicle5" value="v5">
-  <label for="vehicle5"> I prefer reduced transparency</label>
-  
-  <input type="checkbox" id="vehicle6" name="vehicle6" value="v6">
-  <label for="vehicle6"> I prefer on/off labels</label>
-  
-  <input type="checkbox" id="vehicle7" name="vehicle7" value="v7">
-  <label for="vehicle7"> I prefer zoom features</label>
-  
-  <input type="checkbox" id="vehicle8" name="vehicle8" value="v8">
-  <label for="vehicle8"> I prefer large texts</label>
-  
-  <input type="checkbox" id="vehicle9" name="vehicle9" value="v9">
-  <label for="vehicle9"> I prefer audio communication</label>
-</form>
+  <label for="vehicle3"> I prefer increased color contrast</label><div>
+    <input type="checkbox" id="vehicle4" name="vehicle4" value="v4">
+  <label for="vehicle4"> I prefer reduced motion</label><div>
+    <input type="checkbox" id="vehicle5" name="vehicle5" value="v5">
+  <label for="vehicle5"> I prefer reduced transparency</label><div>
+    <input type="checkbox" id="vehicle6" name="vehicle6" value="v6">
+  <label for="vehicle6"> I prefer on/off labels</label><div>
+    <input type="checkbox" id="vehicle7" name="vehicle7" value="v7">
+  <label for="vehicle7"> I prefer zoom features</label><div>
+    <input type="checkbox" id="vehicle8" name="vehicle8" value="v8">
+  <label for="vehicle8"> I prefer large texts</label><div>
+    <input type="checkbox" id="vehicle9" name="vehicle9" value="v9">
+  <label for="vehicle9"> I prefer audio communication</label><div>
+  </form>
 
 
     <label for="input1" id="i1">Username</label>
