--- a/signup.html
+++ b/signup.html
@@ -20,25 +20,24 @@
 <h2>How do you want to communicate?</h2>
 
  <form>
-  <input type="checkbox" id="vehicle1" name="vehicle1" value="v1">
-  <label for="vehicle1" class="nowrap-label"> I prefer using a screenreader</label>
-  <input type="checkbox" id="vehicle2" name="vehicle2" value="v2">
-  <label for="vehicle2" class="nowrap-label"> I prefer reduced noise</label>
-  <input type="checkbox" id="vehicle3" name="vehicle3" value="v3">
-  <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label>
-    <input type="checkbox" id="vehicle4" name="vehicle4" value="v4">
-  <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label>
-    <input type="checkbox" id="vehicle5" name="vehicle5" value="v5">
-  <label for="vehicle5" class="nowrap-label"> I prefer reduced transparency</label>
-    <input type="checkbox" id="vehicle6" name="vehicle6" value="v6">
-  <label for="vehicle6" class="nowrap-label"> I prefer on/off labels</label>
-    <input type="checkbox" id="vehicle7" name="vehicle7" value="v7">
-  <label for="vehicle7" class="nowrap-label"> I prefer zoom features</label>
-    <input type="checkbox" id="vehicle8" name="vehicle8" value="v8">
-  <label for="vehicle8" class="nowrap-label"> I prefer large texts</label>
-    <input type="checkbox" id="vehicle9" name="vehicle9" value="v9">
-  <label for="vehicle9" class="nowrap-label"> I prefer audio communication</label>
-     <br> 
+  <input type="checkbox" class="nowrap-label" id="vehicle1" name="vehicle1" value="v1">
+  <label for="vehicle1" class="nowrap-label"> I prefer using a screenreader</label><br> 
+  <input type="checkbox" class="nowrap-label" id="vehicle2" name="vehicle2" value="v2">
+  <label for="vehicle2" class="nowrap-label"> I prefer reduced noise</label><br> 
+  <input type="checkbox" class="nowrap-label"  id="vehicle3" name="vehicle3" value="v3">
+  <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label><br> 
+    <input type="checkbox" class="nowrap-label"  id="vehicle4" name="vehicle4" value="v4">
+  <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label><br> 
+    <input type="checkbox" class="nowrap-label" id="vehicle5" name="vehicle5" value="v5">
+  <label for="vehicle5" class="nowrap-label"> I prefer reduced transparency</label><br> 
+    <input type="checkbox" class="nowrap-label"  id="vehicle6" name="vehicle6" value="v6">
+  <label for="vehicle6" class="nowrap-label"> I prefer on/off labels</label><br> 
+    <input type="checkbox" class="nowrap-label"  id="vehicle7" name="vehicle7" value="v7">
+  <label for="vehicle7" class="nowrap-label"> I prefer zoom features</label><br>
+    <input type="checkbox" class="nowrap-label"  id="vehicle8" name="vehicle8" value="v8">
+  <label for="vehicle8" class="nowrap-label"> I prefer large texts</label><br>
+    <input type="checkbox" class="nowrap-label"  id="vehicle9" name="vehicle9" value="v9">
+  <label for="vehicle9" class="nowrap-label"> I prefer audio communication</label><br>
   </form>
       <div>
           
