--- a/signup.html
+++ b/signup.html
@@ -21,11 +21,11 @@
 
  <form>
   <input type="checkbox" class="nowrap-label" id="vehicle1" name="vehicle1" value="v1">
-  <label for="vehicle1" class="nowrap-label"> I prefer using a screenreader</label><br> 
+  <label for="vehicle1" class="nowrap-label"> I prefer using a screenreader</label>
   <input type="checkbox" class="nowrap-label" id="vehicle2" name="vehicle2" value="v2">
-  <label for="vehicle2" class="nowrap-label"> I prefer reduced noise</label><br> 
+  <label for="vehicle2" class="nowrap-label"> I prefer reduced noise</label>
   <input type="checkbox" class="nowrap-label"  id="vehicle3" name="vehicle3" value="v3">
-  <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label><br> 
+  <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label>
     <input type="checkbox" class="nowrap-label"  id="vehicle4" name="vehicle4" value="v4">
   <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label><br> 
     <input type="checkbox" class="nowrap-label" id="vehicle5" name="vehicle5" value="v5">
