--- a/signup.html
+++ b/signup.html
@@ -45,18 +45,22 @@
 
 
     <label for="input1" id="i1">Username</label>
-    <input type="text" id="input1" name="input1" placeholder="Enter username">
+    <input type="text" id="input1" name="input1" placeholder="Enter username"><br>
 
     <label for="input2" id="i1">Password</label>
-    <input type="text" id="input2" name="input2" placeholder="Enter password">
+    <input type="text" id="input2" name="input2" placeholder="Enter password"><br>
 
     <label for="input3" id="i1">Gender</label>
-    <input type="text" id="input3" name="input3" placeholder="Enter gender">
+    <input type="text" id="input3" name="input3" placeholder="Enter gender"><br>
 
         <label for="input3" id="i1">Pronouns</label>
-    <input type="text" id="input4" name="input4" placeholder="she/her, they/them, he/him, etc">
+    <input type="text" id="input4" name="input4" placeholder="she/her, they/them, he/him, etc"><br>
+    
+        <label for="input8" id="i1">Age</label>
+    <input type="text" id="input8" name="input8" placeholder="Enter age"><br>
 
-<label for="meetInPerson" class="contact-label">Preferred Mode of Contact</label>
+
+<label for="meetInPerson" class="contact-label">Preferred Mode of Contact</label><br>
 
     <!-- Container for radio options -->
     <div class="contact-options">
@@ -69,34 +73,31 @@
         <input type="radio" id="notSure" name="contactOption" class="contact-option" value="notSure">
         <label for="notSure" class="contact-label">Not Sure</label>
     </div>
-
-    <input type="text" id="input6" name="input6" placeholder="Enter social media, phone #, email, etc">
+<br>
+    <input type="text" id="input6" name="input6" placeholder="Enter social media, phone #, email, etc"><br>
 
     <label for="input7" id="i1">Access Needs</label>
-    <input type="text" id="input7" name="input7" placeholder="Enter password">
-
-        <label for="input8" id="i1">Age</label>
-    <input type="text" id="input8" name="input8" placeholder="Enter age">
+    <input type="text" id="input7" name="input7" placeholder="Enter Access Needs"><br>
 
         <label for="input9" id="i1">Location</label>
-    <input type="text" id="input9" name="input9" placeholder="Enter location">
+    <input type="text" id="input9" name="input9" placeholder="Enter location"><br>
 
         <label for="input10" id="i1">Hobbies</label>
-    <input type="text" id="input10" name="input10" placeholder="Enter hobbies">
+    <input type="text" id="input10" name="input10" placeholder="Enter hobbies"><br>
 
         <label for="input11" id="i1">Disability (optional)</label>
-    <input type="text" id="input11" name="input11" placeholder="Enter disability (optional)">
+    <input type="text" id="input11" name="input11" placeholder="Enter disability (optional)"><br>
 
 <label for="input12" id="i1">Bio (optional)</label>
 <div class="custom-input">
     <textarea id="input12" name="input12" placeholder="Enter bio (optional)"></textarea>
-</div>
-<label for="input20" id="i1">Upload Photo below(optional)</label>
+</div><br>
+<label for="input20" id="i1">Upload Photo below(optional)</label><br>
     <div>
     <img src="img/uploadicon.jpg" id="input20" name="input20" alt="Upload Icon">
-</div>
-        <label for="input13" id="i1">Alt Text For Profile Picture</label>
-    <input type="text" id="input13" name="input13" placeholder="Enter alt text for profile picture">
+</div><br>
+        <label for="input13" id="i1">Alt Text For Profile Picture</label><br>
+    <input type="text" id="input13" name="input13" placeholder="Enter alt text for profile picture"><br>
         <label for="input14" id="i1">(Optional) You can record the audio introduction of yourself by clicking the recording button below</label>
     <div>
     <img src="img/recordbutton.jpg" alt="Record Button">
