--- a/signup.html
+++ b/signup.html
@@ -21,15 +21,15 @@
 
  <form>
   <input type="checkbox" class="nowrap-label" id="vehicle1" name="vehicle1" value="v1">
-  <label for="vehicle1" class="nowrap-label"> I prefer using a screenreader</label>
+  <label for="vehicle1" class="nowrap-label"> I prefer using a screenreader</label><br>
   <input type="checkbox" class="nowrap-label" id="vehicle2" name="vehicle2" value="v2">
-  <label for="vehicle2" class="nowrap-label"> I prefer reduced noise</label>
+  <label for="vehicle2" class="nowrap-label"> I prefer reduced noise</label><br>
   <input type="checkbox" class="nowrap-label"  id="vehicle3" name="vehicle3" value="v3">
-  <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label>
+  <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label><br>
     <input type="checkbox" class="nowrap-label"  id="vehicle4" name="vehicle4" value="v4">
-  <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label><br> 
+  <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label><br> <br>
     <input type="checkbox" class="nowrap-label" id="vehicle5" name="vehicle5" value="v5">
-  <label for="vehicle5" class="nowrap-label"> I prefer reduced transparency</label><br> 
+  <label for="vehicle5" class="nowrap-label"> I prefer reduced transparency</label><br>
     <input type="checkbox" class="nowrap-label"  id="vehicle6" name="vehicle6" value="v6">
   <label for="vehicle6" class="nowrap-label"> I prefer on/off labels</label><br> 
     <input type="checkbox" class="nowrap-label"  id="vehicle7" name="vehicle7" value="v7">
