--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
   <input type="checkbox" class="nowrap-label"  id="vehicle3" name="vehicle3" value="v3">
   <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label><br>
     <input type="checkbox" class="nowrap-label"  id="vehicle4" name="vehicle4" value="v4">
-  <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label><br> <br>
+  <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label><br> 
     <input type="checkbox" class="nowrap-label" id="vehicle5" name="vehicle5" value="v5">
   <label for="vehicle5" class="nowrap-label"> I prefer reduced transparency</label><br>
     <input type="checkbox" class="nowrap-label"  id="vehicle6" name="vehicle6" value="v6">
@@ -42,7 +42,8 @@
       <div>
           
       </div>
-
+<br>
+    <h2>Please Introduce Yourself</h2>
 
     <label for="input1" id="i1">Username</label>
     <input type="text" id="input1" name="input1" placeholder="Enter username"><br>
@@ -98,7 +99,7 @@
 </div><br>
         <label for="input13" id="i1">Alt Text For Profile Picture</label><br>
     <input type="text" id="input13" name="input13" placeholder="Enter alt text for profile picture"><br>
-        <label for="input14" id="i1">(Optional) You can record the audio introduction of yourself by clicking the recording button below</label>
+        <label for="input14" id="i1">(Optional) Audio Introduction By Clicking Below</label>
     <div>
     <img src="img/recordbutton.jpg" alt="Record Button">
 </div>
