--- a/signup.html
+++ b/signup.html
@@ -101,7 +101,7 @@
     <input type="text" id="input13" name="input13" placeholder="Enter alt text for profile picture"><br>
         <label for="input14" id="i1">(Optional) Audio Introduction By Clicking Below</label>
     <div>
-    <img src="img/recordbutton.png" id="record" alt="Record Button">
+    <img src="img/recordbutton.png" id="record" name="record" alt="Record Button">
 </div>
 
 
