--- a/signup.html
+++ b/signup.html
@@ -106,8 +106,8 @@
 
 
     <button id="create_button">Create Account</button>
-        <div id="line"></div>
-    <button id="signin_button">Sign In</button>
+        <div id="line"></div><br> <div>
+            <button id="signin_button">Sign In</button>
     <button id="back_button">Back</button>
     <script>
         // JavaScript to handle the redirection
