--- a/home.html
+++ b/home.html
@@ -29,29 +29,29 @@
           <div class="friend-container">
             <h3 class="bold white static-c">Friends (4)</h3>
             <div class="friend-flex">
-              <div class="friend-card" onclick="openChat('David N.')">
-                <img src="img/user-1.png" alt="Profile picture of Sammie L." class="friend-img">
+              <div class="friend-card" tabindex=0 aria-label="Chat with David N., press enter to chat" onclick="openChat('David N.')">
+                <img src="img/user-1.png" alt="Profile picture of David N. I'm white skinned with blonde hair. I'm wearing a red shirt with a golden necklace while smiling in the picture." class="friend-img">
                 <p class="card-text">David N.</p>
               </div>
-              <div class="friend-card" onclick="openChat('Sammie L.')">
-                <img src="img/user-2.png" alt="Profile picture of Sammie L." class="friend-img">
+              <div class="friend-card" tabindex=0 aria-label="Chat with Sammie L., press enter to chat" onclick="openChat('Sammie L.')">
+                <img src="img/user-2.png" alt="Profile picture of Sammie L. I have tan skin with grey-ish hair. I'm wearing a white shirt with my favorite pair of earrings." class="friend-img">
                 <p class="card-text">Sammie L.</p>
               </div>
-              <div class="friend-card" onclick="openChat('Sarah Gupta')">
-                <img src="img/user-3.png" alt="Profile picture of Sammie L." class="friend-img">
+              <div class="friend-card" tabindex=0 aria-label="Chat with Sarah Gupta, press enter to chat" onclick="openChat('Sarah Gupta')">
+                <img src="img/user-3.png" alt="Profile picture of Sarah Gupta. I am brown skinned, I have long hair and I wear glasses." class="friend-img">
                 <p class="card-text">Sarah Gupta</p>
               </div>
-              <div class="friend-card" onclick="openChat('Max Ferguson')">
-                <img src="img/user-4.png" alt="Profile picture of Sammie L." class="friend-img">
+              <div class="friend-card" tabindex=0 aria-label="Chat with Max Ferguson, press enter to chat" onclick="openChat('Max Ferguson')">
+                <img src="img/user-4.png" alt="Profile picture of Max Ferguson. I am brown skinned, I have short hair and a beard. I am smiling with my sunglasses on." class="friend-img">
                 <p class="card-text">Max Ferguson</p>
               </div>
             </div>
           </div>
           <div class="friend-req-container">
             <h3 class="static-c">Friend Requests</h3>
-            <div class="friend-req-card">
+            <div class="friend-req-card" tabindex=0 aria-label="Friend request from John K.">
               <div class="flex-gen-1">
-                <img src="img/user-5.png" alt="Profile picture of Sammie L." class="friend-img">
+                <img src="img/user-5.png" alt="Profile picture of John K. I am white skinned with blonde hair. I am wearing a white shirt while posing with my jacket behind my back." class="friend-img">
                 <p class="card-text">John K.</p>
               </div>
               <div class="flex-gen-2">
@@ -69,7 +69,7 @@
               <p class="card-text">Ben Franklin (You)</p>
             </div>
             <div class="settings">
-              <button class="nostyle-btn">
+              <button class="nostyle-btn" aria-label="Profile settings, currently disabled">
                 <!-- <img src="img/settings.svg" alt="Settings icon" class="settings-icon"> -->
                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none" class="settings-icon">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M38.0773 5.73865C37.0907 5.33331 35.8373 5.33331 33.3333 5.33331C30.8293 5.33331 29.576 5.33331 28.5893 5.73865C27.2759 6.27788 26.2303 7.31669 25.6827 8.62665C25.432 9.22131 25.336 9.91731 25.296 10.928C25.2782 11.6603 25.0739 12.3759 24.7025 13.0072C24.3311 13.6386 23.8048 14.1647 23.1733 14.536C22.53 14.8936 21.8068 15.083 21.0707 15.0868C20.3347 15.0905 19.6096 14.9084 18.9627 14.5573C18.0613 14.0826 17.408 13.8213 16.7627 13.736C15.3508 13.5506 13.9228 13.9301 12.7893 14.792C11.9413 15.4373 11.3147 16.5146 10.064 18.6666C8.81065 20.8186 8.18665 21.8933 8.04532 22.9466C7.85865 24.3493 8.24265 25.768 9.11199 26.8906C9.50665 27.4026 10.064 27.832 10.9253 28.3706C12.1973 29.1626 13.0133 30.512 13.0133 32C13.0133 33.488 12.1973 34.8373 10.928 35.6266C10.064 36.168 9.50665 36.5973 9.10932 37.1093C8.68021 37.6638 8.36524 38.2979 8.18261 38.9748C7.99999 39.6518 7.95332 40.3582 8.04532 41.0533C8.18665 42.104 8.81065 43.1813 10.064 45.3333C11.3173 47.4853 11.9413 48.56 12.7893 49.208C13.92 50.0693 15.3493 50.448 16.7627 50.264C17.408 50.1786 18.0613 49.9173 18.9627 49.4426C19.6099 49.0911 20.3355 48.9087 21.0721 48.9125C21.8086 48.9162 22.5323 49.1059 23.176 49.464C24.472 50.2106 25.24 51.584 25.296 53.072C25.336 54.0853 25.432 54.7786 25.6827 55.3733C26.2267 56.68 27.272 57.72 28.5893 58.2613C29.576 58.6666 30.8293 58.6666 33.3333 58.6666C35.8373 58.6666 37.0907 58.6666 38.0773 58.2613C39.3908 57.7221 40.4363 56.6833 40.984 55.3733C41.2347 54.7786 41.3307 54.0853 41.3707 53.072C41.424 51.584 42.1947 50.208 43.4933 49.464C44.1367 49.1064 44.8599 48.9169 45.5959 48.9132C46.332 48.9095 47.057 49.0916 47.704 49.4426C48.6053 49.9173 49.2587 50.1786 49.904 50.264C51.3173 50.4506 52.7467 50.0693 53.8773 49.208C54.7253 48.5626 55.352 47.4853 56.6027 45.3333C57.856 43.1813 58.48 42.1066 58.6213 41.0533C58.7129 40.358 58.6659 39.6515 58.4828 38.9745C58.2997 38.2976 57.9842 37.6636 57.5547 37.1093C57.16 36.5973 56.6027 36.168 55.7413 35.6293C54.4693 34.8373 53.6533 33.488 53.6533 32C53.6533 30.512 54.4693 29.1626 55.7387 28.3733C56.6027 27.832 57.16 27.4026 57.5573 26.8906C57.9864 26.3361 58.3014 25.7021 58.484 25.0251C58.6667 24.3482 58.7133 23.6417 58.6213 22.9466C58.48 21.896 57.856 20.8186 56.6027 18.6666C55.3493 16.5146 54.7253 15.44 53.8773 14.792C52.7438 13.9301 51.3158 13.5506 49.904 13.736C49.2587 13.8213 48.6053 14.0826 47.704 14.5573C47.0567 14.9089 46.3311 15.0912 45.5946 15.0875C44.858 15.0838 44.1343 14.8941 43.4907 14.536C42.8597 14.1644 42.3339 13.6381 41.963 13.0068C41.592 12.3755 41.3882 11.66 41.3707 10.928C41.3307 9.91465 41.2347 9.22131 40.984 8.62665C40.7129 7.97794 40.3167 7.389 39.818 6.89347C39.3192 6.39793 38.7278 6.00552 38.0773 5.73865ZM33.3333 40C37.7867 40 41.3947 36.4186 41.3947 32C41.3947 27.5813 37.784 24 33.3333 24C28.88 24 25.272 27.5813 25.272 32C25.272 36.4186 28.8827 40 33.3333 40Z" fill="black"/>
@@ -86,28 +86,28 @@
             </div>
             <h3 class="static-c">Themes</h3>
             <div class="themes-container">
-              <div class="theme">
-                <button class="aa-text" id="t1">Aa</button>
+              <div class="theme" aria-label="Light theme">
+                <button class="aa-text" id="t1" aria-label="Click to change theme">Aa</button>
                 <p class="static-c">Light</p>
               </div>
-              <div class="theme">
-                <button class="aa-text" id="t2">Aa</button>
+              <div class="theme" aria-label="Dark theme">
+                <button class="aa-text" id="t2" aria-label="Click to change theme">Aa</button>
                 <p class="static-c">Dark</p>
               </div>
-              <div class="theme">
-                <button class="aa-text" id="t3">Aa</button>
+              <div class="theme" aria-label="High contrast theme #1">
+                <button class="aa-text" id="t3" aria-label="Click to change theme">Aa</button>
                 <p class="static-c">High contrast #1</p>
               </div>
-              <div class="theme">
-                <button class="aa-text" id="t4">Aa</button>
+              <div class="theme" aria-label="High contrast theme #2">
+                <button class="aa-text" id="t4" aria-label="Click to change theme">Aa</button>
                 <p class="static-c">High contrast #2</p>
               </div>
-              <div class="theme">
-                <button class="aa-text" id="t5">Aa</button>
+              <div class="theme" aria-label="High contrast theme #3">
+                <button class="aa-text" id="t5" aria-label="Click to change theme">Aa</button>
                 <p class="static-c">High contrast #3</p>
               </div>
-              <div class="theme">
-                <button class="aa-text" id="t6">Aa</button>
+              <div class="theme" aria-label="High contrast theme #4">
+                <button class="aa-text" id="t6" aria-label="Click to change theme">Aa</button>
                 <p class="static-c">High contrast #4</p>
               </div>
             </div>
@@ -121,12 +121,12 @@
           <div class="discover-card">
             <div class="discover-top">
               <div class="profile-name">
-                <img src="img/sample-user.png" alt="Profile picture of John Griffith" class="friend-img">
+                <img src="img/sample-user.png" alt="Profile picture of John Griffith. I am brown skinned, I have short black hair with beards." class="friend-img">
                 <h2 class="card-text">John Griffith</h2>
               </div>
               <div class="connect-container">
                 <button class="connect-btn">Connect</button>
-                <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg> -->
               </div>
 
             </div>
@@ -142,12 +142,12 @@
           <div class="discover-card">
             <div class="discover-top">
               <div class="profile-name">
-                <img src="img/sample-user.png" alt="Profile picture of John Griffith" class="friend-img">
-                <h2 class="card-text">John Griffith</h2>
+                <img src="img/user-6.png" alt="Profile picture of Eric Win. I am white skinned. I am wearing a hoodie, glasses, scarf, and my black shirt. It was quite cold that day." class="friend-img">
+                <h2 class="card-text">Eric Win</h2>
               </div>
               <div class="connect-container">
                 <button class="connect-btn">Connect</button>
-                <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg> -->
               </div>
             </div>
             <p><b>Age:</b> 18</p>
@@ -170,7 +170,6 @@
           </div>
         </div>
       </div>
-
 
     </div>
 
