--- a/signup.html
+++ b/signup.html
@@ -20,24 +20,24 @@
 <h2>How do you want to communicate?</h2>
 
  <form>
-  <input type="checkbox" class="nowrap-label" id="i1" name="vehicle1" value="v1">
-  <label for="vehicle1" class="nowrap-label"> I prefer using a screenreader</label><br>
-  <input type="checkbox" class="nowrap-label" id="i2" name="vehicle2" value="v2">
-  <label for="vehicle2" class="nowrap-label"> I prefer reduced noise</label><br>
-  <input type="checkbox" class="nowrap-label"  id="i3" name="vehicle3" value="v3">
-  <label for="vehicle3" class="nowrap-label"> I prefer increased color contrast</label><br>
-    <input type="checkbox" class="nowrap-label"  id="i4" name="vehicle4" value="v4">
-  <label for="vehicle4" class="nowrap-label"> I prefer reduced motion</label><br> 
-    <input type="checkbox" class="nowrap-label" id="i5" name="vehicle5" value="v5">
-  <label for="vehicle5" class="nowrap-label"> I prefer reduced transparency</label><br>
-    <input type="checkbox" class="nowrap-label"  id="i6" name="vehicle6" value="v6">
-  <label for="vehicle6" class="nowrap-label"> I prefer on/off labels</label><br> 
-    <input type="checkbox" class="nowrap-label"  id="i7" name="vehicle7" value="v7">
-  <label for="vehicle7" class="nowrap-label"> I prefer zoom features</label><br>
-    <input type="checkbox" class="nowrap-label"  id="i8" name="vehicle8" value="v8">
-  <label for="vehicle8" class="nowrap-label"> I prefer large texts</label><br>
-    <input type="checkbox" class="nowrap-label"  id="i9" name="vehicle9" value="v9">
-  <label for="vehicle9" class="nowrap-label"> I prefer audio communication</label><br>
+  <input type="checkbox" class="nowrap-label" id="i1" name="vehicle1" value="v1" aria-label="agree to the text on the right">
+  <label for="vehicle1" class="nowrap-label" for="i1"> I prefer using a screenreader</label><br>
+  <input type="checkbox" class="nowrap-label" id="i2" name="vehicle2" value="v2" aria-label="agree to the text on the right">
+  <label for="vehicle2" class="nowrap-label" for="i1"> I prefer reduced noise</label><br>
+  <input type="checkbox" class="nowrap-label"  id="i3" name="vehicle3" value="v3" aria-label="agree to the text on the right">
+  <label for="vehicle3" class="nowrap-label" for="i1"> I prefer increased color contrast</label><br>
+    <input type="checkbox" class="nowrap-label"  id="i4" name="vehicle4" value="v4" aria-label="agree to the text on the right">
+  <label for="vehicle4" class="nowrap-label" for="i1"> I prefer reduced motion</label><br> 
+    <input type="checkbox" class="nowrap-label" id="i5" name="vehicle5" value="v5" aria-label="agree to the text on the right">
+  <label for="vehicle5" class="nowrap-label" for="i1"> I prefer reduced transparency</label><br>
+    <input type="checkbox" class="nowrap-label"  id="i6" name="vehicle6" value="v6" aria-label="agree to the text on the right">
+  <label for="vehicle6" class="nowrap-label" for="i1"> I prefer on/off labels</label><br> 
+    <input type="checkbox" class="nowrap-label"  id="i7" name="vehicle7" value="v7" aria-label="agree to the text on the right">
+  <label for="vehicle7" class="nowrap-label" for="i1"> I prefer zoom features</label><br>
+    <input type="checkbox" class="nowrap-label"  id="i8" name="vehicle8" value="v8" aria-label="agree to the text on the right">
+  <label for="vehicle8" class="nowrap-label" for="i1"> I prefer large texts</label><br>
+    <input type="checkbox" class="nowrap-label"  id="i9" name="vehicle9" value="v9" aria-label="agree to the text on the right">
+  <label for="vehicle9" class="nowrap-label" for="i1"> I prefer audio communication</label><br>
   </form>
       <div>
           
