--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="nunito.css"> <!-- Load font stylesheet first -->
-      <link rel="stylesheet" href="signup.css">  <!-- Then, load custom stylesheet -->
+     
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
+<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="signup.css">  <!-- Then, load custom stylesheet -->
 </head>
     
 <body>
