added more users to discover page

--- a/home.html
+++ b/home.html
@@ -136,6 +136,12 @@
             <p><b>Location:</b> Seattle, WA</p>
             <p><b>Hobbies:</b> Drawing, watching movies, singing</p>
             <p><b>Disability:</b> Deaf</p>
+            <ul><b>Means of communication:</b>
+              <li>I prefer using a screenreader</li>
+              <li>I prefer increased color contrast</li>
+            </ul>
+            <p><b>Preferred Mode of Contact: </b> Stay Online</p>
+            <p><b>Access Needs: </b> I use an interpreter</p>
             <p><b>Introduction:</b> Hello! I'm John, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
           </div>
 
@@ -156,7 +162,65 @@
             <p><b>Location:</b> Seattle, WA</p>
             <p><b>Hobbies:</b> Drawing, watching movies, singing</p>
             <p><b>Disability:</b> Deaf</p>
-            <p><b>Introduction:</b> Hello! I'm John, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
+            <ul><b>Means of communication:</b>
+              <li>I prefer using a screenreader</li>
+              <li>I prefer increased color contrast</li>
+            </ul>
+            <p><b>Preferred Mode of Contact: </b> Stay Online</p>
+            <p><b>Access Needs: </b> I use an interpreter</p>
+            <p><b>Introduction:</b> Hello! I'm Eric, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
+          </div>
+
+          <div class="discover-card">
+            <div class="discover-top">
+              <div class="profile-name">
+                <img src="img/user-7.png" alt="Profile picture of Eric Win. I am white skinned. I am wearing a hoodie, glasses, scarf, and my black shirt. It was quite cold that day." class="friend-img">
+                <h2 class="card-text">Peter Sake</h2>
+              </div>
+              <div class="connect-container">
+                <button class="connect-btn">Connect</button>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg> -->
+              </div>
+            </div>
+            <p><b>Age:</b> 18</p>
+            <p><b>Gender:</b> Male</p>
+            <p><b>Pronouns:</b> He/him</p>
+            <p><b>Location:</b> Seattle, WA</p>
+            <p><b>Hobbies:</b> Drawing, watching movies, singing</p>
+            <p><b>Disability:</b> Deaf</p>
+            <ul><b>Means of communication:</b>
+              <li>I prefer using a screenreader</li>
+              <li>I prefer increased color contrast</li>
+            </ul>
+            <p><b>Preferred Mode of Contact: </b> Stay Online</p>
+            <p><b>Access Needs: </b> I use an interpreter</p>
+            <p><b>Introduction:</b> Hello! I'm Eric, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
+          </div>
+
+          <div class="discover-card">
+            <div class="discover-top">
+              <div class="profile-name">
+                <img src="img/user-8.png" alt="Profile picture of Eric Win. I am white skinned. I am wearing a hoodie, glasses, scarf, and my black shirt. It was quite cold that day." class="friend-img">
+                <h2 class="card-text">Emily Blunt</h2>
+              </div>
+              <div class="connect-container">
+                <button class="connect-btn">Connect</button>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="kebab" version="1.1" viewBox="0 0 16 16" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"> <circle cx="8" cy="2.5" r=".75"/> <circle cx="8" cy="8" r=".75"/> <circle cx="8" cy="13.5" r=".75"/> </svg> -->
+              </div>
+            </div>
+            <p><b>Age:</b> 18</p>
+            <p><b>Gender:</b> Female</p>
+            <p><b>Pronouns:</b> She/her</p>
+            <p><b>Location:</b> Seattle, WA</p>
+            <p><b>Hobbies:</b> Drawing, watching movies, singing</p>
+            <p><b>Disability:</b> Deaf</p>
+            <ul><b>Means of communication:</b>
+              <li>I prefer using a screenreader</li>
+              <li>I prefer increased color contrast</li>
+            </ul>
+            <p><b>Preferred Mode of Contact: </b> Stay Online</p>
+            <p><b>Access Needs: </b> I use an interpreter</p>
+            <p><b>Introduction:</b> Hello! I'm Eric, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
           </div>
         </div>
 
